--- a/VETPRO2/packages.config
+++ b/VETPRO2/packages.config
@@ -12,6 +12,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
@@ -30,4 +32,6 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
+  <package id="WebMatrix.Data" version="2.0.30506.0" targetFramework="net452" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net452" />
 </packages>
